; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_hwcontext.c_av_hwdevice_get_type_name.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_hwcontext.c_av_hwdevice_get_type_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_HWDEVICE_TYPE_NONE = common dso_local global i32 0, align 4
@hw_type_names = common dso_local global i8** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @av_hwdevice_get_type_name(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @AV_HWDEVICE_TYPE_NONE, align 4
  %6 = icmp ugt i32 %4, %5
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = load i8**, i8*** @hw_type_names, align 8
  %10 = call i32 @FF_ARRAY_ELEMS(i8** %9)
  %11 = icmp ult i32 %8, %10
  br i1 %11, label %12, label %18

12:                                               ; preds = %7
  %13 = load i8**, i8*** @hw_type_names, align 8
  %14 = load i32, i32* %3, align 4
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds i8*, i8** %13, i64 %15
  %17 = load i8*, i8** %16, align 8
  store i8* %17, i8** %2, align 8
  br label %19

18:                                               ; preds = %7, %1
  store i8* null, i8** %2, align 8
  br label %19

19:                                               ; preds = %18, %12
  %20 = load i8*, i8** %2, align 8
  ret i8* %20
}

declare dso_local i32 @FF_ARRAY_ELEMS(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
